# Brain-Tumor-Classification

./: .gitignore  README.md  download_dataset.sh  pyproject.toml  requirements.txt
results/: SimpleCNN_history.csv  SimpleCNN_results.json  all_models_summary.csv
scripts/: data_exploration.py  predict_single_image.py  train_models.py
